[package]
name = "multihash"
version = "0.2.2"
edition = "2021"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
description = "Multihash self-describing cryptographic hash data"
repository = "https://github.com/cryptidtech/multihash.git"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
blake2 = "0.10"
hex = "0.4"
digest = "0.10"
md-5 = "0.10"
multibase = "0.9"
multicodec = { version = "0.2", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multiutil = { version = "0.1", git = "https://github.com/cryptidtech/multiutil.git" }
ripemd = "0.1.3"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
typenum = "1.17"
unsigned-varint = { version = "0.8", features = ["std"]}
