[package]
name = "multihash"
version = "0.2.10"
edition = "2021"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
description = "Multihash self-describing cryptographic hash data"
repository = "https://github.com/cryptidtech/multihash.git"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["serde"]

[dependencies]
blake2 = "0.10"
digest = "0.10"
md-5 = "0.10"
multibase = "0.9"
multicodec = { version = "0.2", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multitrait = { version = "0.1", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "0.1", git = "https://github.com/cryptidtech/multiutil.git" }
ripemd = "0.1.3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
typenum = "1.17"
unsigned-varint = { version = "0.8", features = ["std"]}

[dev-dependencies]
hex = "0.4"
serde_test = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
