[package]
name = "multihash"
version = "1.0.3"
edition = "2021"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Multihash self-describing cryptographic hash data"
repository = "https://github.com/cryptidtech/multihash.git"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["serde"]

[dependencies]
blake2 = "0.10"
blake3 = { version = "1.5.1", features = ["traits-preview", "zeroize"] }
digest = "0.10"
hex = "0.4"
md-5 = "0.10"
multibase = { version = "1.0", git = "https://github.com/cryptidtech/rust-multibase.git" }
multicodec = { version = "1.0", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }
ripemd = "0.1.3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
typenum = "1.17"
unsigned-varint = { version = "0.8", features = ["std"]}

[dev-dependencies]
hex = "0.4"
serde_test = "1.0"
serde_json = "1.0"
serde_cbor = "0.11"
